--- a/style.css
+++ b/style.css
@@ -1,29 +1,65 @@
 body{
     background-color: aquamarine;
-    background-image: url(maxresdefault.jpg);
+    background-image: url(../maxresdefault.jpg);
     color: azure;
 }
 
-h1{
- font-display: white; 
- color: white;
- position: relative;
- margin-bottom: 350px;
- margin-right: 20px;
- width: 100;
+
+.cs1{
+    margin-left: 20px;
+    margin-top: 360px;
+    position: absolute;
+    font-size: 35px;
+    color: wheat;
 }
 
-h2{
+.pers{
     margin-left: 20px;
-}
-
-h3{
-    margin-left: 20px;
-    font-size: 150%;
+    font-size: 15px;
+    top: 34px;
+    position: absolute;
+    color: wheat;
 }
 
 title{
  color: blue;
- margin: 10 20 30 40;
+ margin: 10 20 30 40; 
 }
 
+.adq{
+    margin: 460px 20px 20px 20px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color: wheat;
+}
+
+/* === HEADING STYLE #2 === */
+.two h1 {
+  text-transform: capitalize;
+  margin-left: 20px;
+}
+.two h1:before {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 60px;
+  height: 2px;
+  content: "";
+  background-color: white;
+}
+
+.two h1 span {
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  line-height: 3em;
+  padding-left: 0.25em;
+  color: wheat;
+  padding-bottom: 10px;
+}
+.alt-two h1 {
+  text-align:center;
+}
+.alt-two h1:before {
+  left:50%; margin-left:-30px;
+}
