--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: aquamarine;
-    background-image: url(../maxresdefault.jpg);
+    background-image: url(Imagenes/maxresdefault.jpg);
     color: azure;
 }
 
